--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "clicky-game",
-  "version": "0.1.0",
+  "version": "1.0",
   "private": true,
+  "engines": {
+    "npm": "6.4.1",
+    "node": "10.15.3"
+  },
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
